--- a/client/home/templates/home.html
+++ b/client/home/templates/home.html
@@ -1,4 +1,10 @@
 <template name="home">
-	<h2> Home </h2>
-	<p>Welcome to our home</p>
+	<div class="jumbotron text-center">
+		<h1> Not just your typical TodoList App </h1>
+		<p> Manage task efficiently by yourself or with your colleagues </p>
+		<div class="text-center">
+			<a href="#" class="btn btn-success"> Get started </a>
+			<a href="{{pathFor route='register'}}" class="btn btn-primary"> Sign up for free</a>
+		</div>
+	</div>
 </template>
