--- a/client/login/templates/login.html
+++ b/client/login/templates/login.html
@@ -1,3 +1,15 @@
 <template name="login">
 	<h1> Login </h1>
+	<form id="login">
+		<div class="form-group">
+			<input type="email" class="form-control" placeholder="Email" name="email" required>
+		</div>
+		<div class="form-group">
+			<input type="password" class="form-control" placeholder="Password" name="password" required>
+		</div>
+		<div class="form-group">
+			<a href="{{pathFor route='register'}}" class="btn btn-danger">Create account</a>
+			<button type="submit" class="btn btn-primary">Login</button>
+		</div>
+	</form>
 </template>
