--- a/client/register/templates/register.html
+++ b/client/register/templates/register.html
@@ -1,3 +1,22 @@
 <template name="register">
-	<h1> Register </h1>
+	<header class="page-header text-center">
+		<h1> Register </h1>
+	</header>
+	<form id="register">
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="First Name" name="fname" required>
+		</div>
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Last Name" name="lname" required>
+		</div>
+		<div class="form-group">
+			<input type="email" class="form-control" placeholder="Email address" name="email" required>
+		</div>
+		<div class="form-group">
+			<input type="password" class="form-control" placeholder="Password" name="password" required>
+		</div>
+		<div class="form-group">
+			<button type="submit" class="btn btn-info btn-lg btn-block"> Register </button>
+		</div>
+	</form>
 </template>
