--- a/client/lists/templates/lists.html
+++ b/client/lists/templates/lists.html
@@ -7,7 +7,10 @@
 </template>
 
 <template name="listItem">
-	<a href="{{pathFor route='listPage'}}" class="list-group-item">{{ name }}</a>
+	<a href="{{pathFor route='listPage'}}" class="list-group-item">
+		{{ name }}
+		<span class="badge">{{tasksCount}}</span>
+	</a>
 </template>
 
 <template name="listPage">
